--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -1,38 +1,29 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Psalm Security Scan
+name: Psalm Analysis
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
   pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "master" ]
-  schedule:
-    - cron: '21 19 * * 6'
-
-permissions:
-  contents: read
+    branches:
+      - master
 
 jobs:
-  php-security:
+  psalm_analysis:
+    name: Psalm Analysis
     runs-on: ubuntu-latest
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Psalm Security Scan
-        uses: psalm/psalm-github-security-scan@f3e6fd9432bc3e44aec078572677ce9d2ef9c287
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.4'
 
-      - name: Upload Security Analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: results.sarif
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-interaction
+
+    - name: Run Psalm
+      run: vendor/bin/psalm --show-info=false --no-progress
